# pymodoro

./: .cursorrules  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs_ai/: feature_save_session.md  feature_ui_refactor.md  plan_ui_refactor.md  project_nuances.md
src/pymodoro/: __main__.py  interface.py  keyboard.py  session_model.py  sound.py  storage.py  timer.py
src/pymodoro/ui/: __init__.py  components.py  layout.py  screens.py  theme.py
