[project]
name = "pymodoro"
version = "0.1.0"
description = "Pymodoro, a beautiful Python command line pomodor timer"
authors = [{ name = "Ben Emson", email = "mail@benemson.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playsound>=1.3.0",
    "pyaml>=25.5.0",
    "pydantic>=2.11.5",
    "rich>=14.0.0",
]

[project.scripts]
pymodoro = "pymodoro.__main__:main"

